--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -13,6 +13,14 @@ services:
       mode: replicated
       replicas: 1
 
+  listener-service:
+    build:
+      context: ./../listener-service
+      dockerfile: ./../listener-service/listener-service.dockerfile
+    deploy:
+      mode: replicated
+      replicas: 1
+
   logger-service:
     build:
       context: ./../logger-service
